欠損値の個数

--- a/list2,27.ipynb
+++ b/list2,27.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkRLxgFM81Ln2pc8+cNVlc",
+      "authorship_tag": "ABX9TyNeAipBJ+qklfMAPVY5SnRx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -381,6 +381,42 @@
         "idx = [\"A太\",\"B介\",\"C子\",\"D郎\",]\n",
         "dfa = pd.DataFrame(data, index=idx)\n",
         "dfa"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# サンプルデータの作成\n",
+        "data = {\n",
+        "    '国語': [10, 20, None],\n",
+        "    '数学': [40, None, 60]\n",
+        "}\n",
+        "dfA = pd.DataFrame(data)\n",
+        "\n",
+        "# 各カラムにおける欠損値の数を計算\n",
+        "null_counts = dfA.isnull().sum()\n",
+        "print(null_counts)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tTldJehggEDR",
+        "outputId": "b11d6ee1-e671-421b-fb8c-f971b812d5eb"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "国語    1\n",
+            "数学    1\n",
+            "dtype: int64\n"
+          ]
+        }
       ]
     }
   ]
