欠損値のある行を削除

--- a/list2,27.ipynb
+++ b/list2,27.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNeAipBJ+qklfMAPVY5SnRx",
+      "authorship_tag": "ABX9TyO0cdCT/b86hCz1ia34Ri8S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -406,7 +406,7 @@
         "id": "tTldJehggEDR",
         "outputId": "b11d6ee1-e671-421b-fb8c-f971b812d5eb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,6 +415,43 @@
             "国語    1\n",
             "数学    1\n",
             "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# サンプルデータの作成\n",
+        "data = {\n",
+        "    '国語': [10, 20, None],\n",
+        "    '数学': [40, None, 60]\n",
+        "}\n",
+        "dfA = pd.DataFrame(data)\n",
+        "\n",
+        "# 欠損値を含む行を削除\n",
+        "dfB = dfA.dropna()\n",
+        "\n",
+        "# 結果の表示\n",
+        "print(dfB)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_U4tEFIkPjBV",
+        "outputId": "2237a0e5-8059-40ae-9cc0-bc622ba621c7"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     国語    数学\n",
+            "0  10.0  40.0\n"
           ]
         }
       ]
