重複データの個数

--- a/list2,33.ipynb
+++ b/list2,33.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqPqbZECaqAOPKO09akPmv",
+      "authorship_tag": "ABX9TyMKuaPUw+olUFCCpwTpEaE1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -395,6 +395,45 @@
         "       ]\n",
         "dfA = pd.DataFrame(data)\n",
         "dfA"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# データフレーム.duplicated().value_counts()"
+      ],
+      "metadata": {
+        "id": "9pbIBSxZkDw2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dfA.duplicated().value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "50dGkza0kKGn",
+        "outputId": "d03fd342-5718-47bf-f551-0a2c52987ef1"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False    3\n",
+              "True     2\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
       ]
     }
   ]
