データの種類_文字列

--- a/list2,36.ipynb
+++ b/list2,36.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgJDEL+bGzdCI7B/KbCWty",
+      "authorship_tag": "ABX9TyOARXrpXiEKluSrW3KkNOt4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -372,12 +372,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dfA.dtypes"
+      ],
       "metadata": {
-        "id": "jHNRk0MNnAvY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jHNRk0MNnAvY",
+        "outputId": "788d8386-51e4-445a-be91-bb941b17a109"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "A    object\n",
+              "B    object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     }
   ]
 }
