列Aを整数に変換

--- a/list2,36.ipynb
+++ b/list2,36.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOARXrpXiEKluSrW3KkNOt4",
+      "authorship_tag": "ABX9TyOTPczoNstzHHQsvdxQwtcM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -395,6 +395,47 @@
           },
           "metadata": {},
           "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 文字列の列データを整数に変換\n",
+        "# データフレーム[\"列名\"] = データーフレーム[\"列名\"].astype(int)"
+      ],
+      "metadata": {
+        "id": "rred7CS2oBvi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dfA[\"A\"] = dfA[\"A\"].astype(int)\n",
+        "dfA.dtypes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "--3YSjyUooih",
+        "outputId": "34964dfd-5c2a-44c5-877c-7335ec62e2de"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "A     int64\n",
+              "B    object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ]
     }
