列Bを整数に変換

--- a/list2,36.ipynb
+++ b/list2,36.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTPczoNstzHHQsvdxQwtcM",
+      "authorship_tag": "ABX9TyNt0k+HAADTotwpS7Ud2K4/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -436,6 +436,47 @@
           },
           "metadata": {},
           "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# カンマ付き文字列の列データのカンマを削除\n",
+        "# データフレーム[\"列名\"] = データフレーム[\"列名\"].str.replace(\",\",\"\"))"
+      ],
+      "metadata": {
+        "id": "_xZ3D9Jdpw_q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dfA[\"B\"] = dfA[\"B\"].str.replace(\",\",\"\").astype(int)\n",
+        "dfA.dtypes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s-oM1KGxrJpp",
+        "outputId": "47a1bb71-e810-4f7f-dd32-61ee35cb93f8"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "A    int64\n",
+              "B    int64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     }
