平均値を表示

--- a/list3,1.ipynb
+++ b/list3,1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNenL4RoeSrwVXtS9q88CvB",
+      "authorship_tag": "ABX9TyMlnj2gB8oiSODvM0lv7Afp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -386,6 +386,31 @@
         "}\n",
         "df = pd.DataFrame(data)\n",
         "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Aクラス =\", df[\"Aクラス\"].mean())\n",
+        "print(\"Bクラス =\", df[\"Bクラス\"].mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kD-Jiu6ntuyh",
+        "outputId": "a6c813a8-bf75-41fe-d3f8-c7e4e8a64030"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aクラス = 85.0\n",
+            "Bクラス = 80.0\n"
+          ]
+        }
       ]
     }
   ]
