各列データの平均値

--- a/list3,1.ipynb
+++ b/list3,1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlnj2gB8oiSODvM0lv7Afp",
+      "authorship_tag": "ABX9TyMiigo46kjwqw7mxQszfF33",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -409,6 +409,31 @@
           "text": [
             "Aクラス = 85.0\n",
             "Bクラス = 80.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mbR14LIru4hO",
+        "outputId": "469695a1-8639-4023-cb09-9bdfb992d9e5"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aクラス    85.0\n",
+            "Bクラス    80.0\n",
+            "dtype: float64\n"
           ]
         }
       ]
