代表値と1つのデータを比較

--- a/list3,1.ipynb
+++ b/list3,1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiigo46kjwqw7mxQszfF33",
+      "authorship_tag": "ABX9TyP5Yfj3Yi5Rs0Dp6L9Qit3f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -434,6 +434,31 @@
             "Aクラス    85.0\n",
             "Bクラス    80.0\n",
             "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.iloc[0][\"Aクラス\"])\n",
+        "print(df[\"Aクラス\"].mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tZ8NTxRdvxlo",
+        "outputId": "09e00ffe-07a6-4616-c191-24ba98e055a1"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "82\n",
+            "85.0\n"
           ]
         }
       ]
