予想価格の平均値

--- a/list3,5.ipynb
+++ b/list3,5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2AjmqCQjGafV6kSrVZcfE",
+      "authorship_tag": "ABX9TyMBowgJlOBBHBJIYUvGLC/I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -384,6 +384,30 @@
         "}\n",
         "df = pd.DataFrame(data)\n",
         "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nGkXgI7i81Lt",
+        "outputId": "f20990fe-bf75-418b-8025-38ef9b934d80"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "予想価格    1030.0\n",
+            "dtype: float64\n"
+          ]
+        }
       ]
     }
   ]
