各列データの中央値

--- a/list3,5.ipynb
+++ b/list3,5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBowgJlOBBHBJIYUvGLC/I",
+      "authorship_tag": "ABX9TyOuMNkED7ZHqgScnqNivNl0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -405,6 +405,30 @@
           "name": "stdout",
           "text": [
             "予想価格    1030.0\n",
+            "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.median())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F5Fu__bz-E9p",
+        "outputId": "6364b688-73f4-4a86-9167-7b282574b3d5"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "予想価格    245.0\n",
             "dtype: float64\n"
           ]
         }
