各列データの最頻値

--- a/list3,5.ipynb
+++ b/list3,5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuMNkED7ZHqgScnqNivNl0",
+      "authorship_tag": "ABX9TyNCNny+UNwg879O1LR3lr27",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -430,6 +430,30 @@
           "text": [
             "予想価格    245.0\n",
             "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.mode())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q6os889t-o8k",
+        "outputId": "d4aed652-6255-4461-c491-d3e858b3256a"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   予想価格\n",
+            "0   240\n"
           ]
         }
       ]
