--- a/list3,10.ipynb
+++ b/list3,10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNv7XtCO92f43Kjr2rwe3pT",
+      "authorship_tag": "ABX9TyMez1aNEabF5WnyVh4M+a5T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -414,6 +414,32 @@
         "}\n",
         "df = pd.DataFrame(data)\n",
         "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Ao5nL8h-v5A",
+        "outputId": "bc19fa89-9b38-4d09-bc40-fd96425f4469"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A案    5.5\n",
+            "B案    5.5\n",
+            "C案    5.5\n",
+            "dtype: float64\n"
+          ]
+        }
       ]
     }
   ]
