--- a/list3,10.ipynb
+++ b/list3,10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMez1aNEabF5WnyVh4M+a5T",
+      "authorship_tag": "ABX9TyP3evbRMUihmi6X699jlCEa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -429,6 +429,32 @@
         "outputId": "bc19fa89-9b38-4d09-bc40-fd96425f4469"
       },
       "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A案    5.5\n",
+            "B案    5.5\n",
+            "C案    5.5\n",
+            "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.median())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wvmgGxzx_HqT",
+        "outputId": "31279d50-ab35-45a8-d714-88c3b3761f43"
+      },
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
