--- a/list3,10.ipynb
+++ b/list3,10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3evbRMUihmi6X699jlCEa",
+      "authorship_tag": "ABX9TyOTmaOT1oYdzTOhWxSHxtVs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -464,6 +464,37 @@
             "B案    5.5\n",
             "C案    5.5\n",
             "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.mode())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N5gOZHfY_d0x",
+        "outputId": "1758da65-d2f7-4f07-b7ef-51e4143849b0"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     A案   B案  C案\n",
+            "0   1.0  5.0   1\n",
+            "1  10.0  6.0   2\n",
+            "2   NaN  NaN   3\n",
+            "3   NaN  NaN   4\n",
+            "4   NaN  NaN   7\n",
+            "5   NaN  NaN   8\n",
+            "6   NaN  NaN   9\n",
+            "7   NaN  NaN  10\n"
           ]
         }
       ]
