--- a/list3,10.ipynb
+++ b/list3,10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTmaOT1oYdzTOhWxSHxtVs",
+      "authorship_tag": "ABX9TyMARkZHm2yljbs6V61i//OT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -428,7 +428,7 @@
         "id": "2Ao5nL8h-v5A",
         "outputId": "bc19fa89-9b38-4d09-bc40-fd96425f4469"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +454,7 @@
         "id": "wvmgGxzx_HqT",
         "outputId": "31279d50-ab35-45a8-d714-88c3b3761f43"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +480,7 @@
         "id": "N5gOZHfY_d0x",
         "outputId": "1758da65-d2f7-4f07-b7ef-51e4143849b0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,6 +496,40 @@
             "6   NaN  NaN   9\n",
             "7   NaN  NaN  10\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bins=[1,3,5,7,9,11]\n",
+        "cut = pd.cut(df[\"A案\"], bins=bins, right=False)\n",
+        "cut.value_counts(sort=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PJsFZ85eDhVC",
+        "outputId": "9fdd659a-6888-48b4-8618-afea254fa55d"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "A案\n",
+              "[1, 3)     4\n",
+              "[3, 5)     0\n",
+              "[5, 7)     0\n",
+              "[7, 9)     0\n",
+              "[9, 11)    4\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     }
