B案_度数分布表

--- a/list3,10.ipynb
+++ b/list3,10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMARkZHm2yljbs6V61i//OT",
+      "authorship_tag": "ABX9TyPtnw8TpxsXddQrh82Vsx0D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -530,6 +530,36 @@
           },
           "metadata": {},
           "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cut = pd.cut(df[\"B案\"], bins=bins, right=False)\n",
+        "print(cut.value_counts(sort=False))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cOG65rI_E2-o",
+        "outputId": "974ad6c6-1e65-4a34-a45e-6eb718fcc96e"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "B案\n",
+            "[1, 3)     0\n",
+            "[3, 5)     0\n",
+            "[5, 7)     8\n",
+            "[7, 9)     0\n",
+            "[9, 11)    0\n",
+            "Name: count, dtype: int64\n"
+          ]
         }
       ]
     }
