--- a/list3,10.ipynb
+++ b/list3,10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtnw8TpxsXddQrh82Vsx0D",
+      "authorship_tag": "ABX9TyMwF1t59F9rwyBgkGEW/Afk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -558,6 +558,36 @@
             "[5, 7)     8\n",
             "[7, 9)     0\n",
             "[9, 11)    0\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cut = pd.cut(df[\"C案\"], bins=bins, right=False)\n",
+        "print(cut.value_counts(sort=False))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9-Yn91pwGyaV",
+        "outputId": "6e45b147-e2cd-41d0-930a-9125149fce5f"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "C案\n",
+            "[1, 3)     2\n",
+            "[3, 5)     2\n",
+            "[5, 7)     0\n",
+            "[7, 9)     2\n",
+            "[9, 11)    2\n",
             "Name: count, dtype: int64\n"
           ]
         }
