seabornのスタイルの変更

--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOkWbfrrJS1EOoMoPl9YNmG",
+      "authorship_tag": "ABX9TyNQ+cHajRL5oy0o1Yseiug5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,17 +29,26 @@
     {
       "cell_type": "code",
       "source": [
+        "# スタイル(グラフ全体の色など) dark(暗色) darkgrid(暗色で線有り) など"
+      ],
+      "metadata": {
+        "id": "0DVCuGT4VBTr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "%matplotlib inline\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "sns.set(font=[\"Meiryo\", \"Yu Gothic\", \"Hiragino Maru Gothic Pro\"])\n",
+        "sns.set(style=\"dark\", font=[\"Meiryo\", \"Yu Gothic\", \"Hiragino Maru Gothic Pro\"])\n",
         "\n",
         "plt.plot([0,100,200],[100,0,200])\n",
         "plt.title(\"タイトル\")\n",
         "plt.show()"
       ],
       "metadata": {
-        "id": "Akn66ZZbSN2z"
+        "id": "bnyr7d7zUjso"
       },
       "execution_count": null,
       "outputs": []
