列データのヒストグラムを表示

--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+ju4VWFSOIvFm16figWo/",
+      "authorship_tag": "ABX9TyM/y/wEBIgrRx0QTJesb6Om",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -420,6 +420,32 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 列データのヒストグラムを表示"
+      ],
+      "metadata": {
+        "id": "cWvE6w4QaFTn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bins=[1,3,5,7,9,11]\n",
+        "\n",
+        "df.plot.hist(bins=bins)\n",
+        "plt.title(\"ケーキの感想はどのように違うか？\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "LxlbSnbQZ_uT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
