データフレーム["列名"]で指定

--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/y/wEBIgrRx0QTJesb6Om",
+      "authorship_tag": "ABX9TyPsBxkgZXnd4ave4ZlIQmb1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -443,6 +443,27 @@
       ],
       "metadata": {
         "id": "LxlbSnbQZ_uT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"A案\"].plot.hist(bins=bins)\n",
+        "plt.title(\"A案のケーキの感想\")\n",
+        "plt.show()\n",
+        "\n",
+        "df[\"B案\"].plot.hist(bins=bins)\n",
+        "plt.title(\"B案のケーキの感想\")\n",
+        "plt.show()\n",
+        "\n",
+        "df[\"C案\"].plot.hist(bins=bins)\n",
+        "plt.title(\"C案のケーキの感想\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "UpwDKsGNb0bF"
       },
       "execution_count": null,
       "outputs": []
