--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsBxkgZXnd4ave4ZlIQmb1",
+      "authorship_tag": "ABX9TyP+ci4x4hbkRYNFu1Te9UIU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,12 +33,12 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "sns.set(font=[\"Meiryo\", \"Yu Gothic\", \"Hiragino Maru Gothic Pro\"])\n",
+        "sns.set(font=[\"Meiryo\",\"Yu Gothic\", \"Hiragino Maru Gothic Pro\"])\n",
         "\n",
         "data = {\n",
-        "    \"A案\" : [1,10,1,10,1,10,1,10],\n",
-        "    \"B案\" : [5,5,5,5,6,6,6,6],\n",
-        "    \"C案\" : [1,2,3,4,7,8,9,10]\n",
+        "    \"名前\" : [\"A太\",\"B介\",\"C子\"],\n",
+        "    \"国語\" : [60,80,100],\n",
+        "    \"英語\" : [66,88,100]\n",
         "}\n",
         "df = pd.DataFrame(data)\n",
         "df"
@@ -46,30 +46,25 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 300
+          "height": 143
         },
-        "id": "bnyr7d7zUjso",
-        "outputId": "7b990f60-d67f-4e35-ad82-8ba6da601254"
+        "id": "HZS5S-n6HbB5",
+        "outputId": "bd2bb579-d2e5-422f-fa27-9155c92ce271"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   A案  B案  C案\n",
-              "0   1   5   1\n",
-              "1  10   5   2\n",
-              "2   1   5   3\n",
-              "3  10   5   4\n",
-              "4   1   6   7\n",
-              "5  10   6   8\n",
-              "6   1   6   9\n",
-              "7  10   6  10"
+              "   名前   国語   英語\n",
+              "0  A太   60   66\n",
+              "1  B介   80   88\n",
+              "2  C子  100  100"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2267433d-6386-4294-a335-bf34b808e490\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-41500ba2-2502-46b1-bff2-a0a5c806c970\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -88,59 +83,29 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>A案</th>\n",
-              "      <th>B案</th>\n",
-              "      <th>C案</th>\n",
+              "      <th>名前</th>\n",
+              "      <th>国語</th>\n",
+              "      <th>英語</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>5</td>\n",
-              "      <td>1</td>\n",
+              "      <td>A太</td>\n",
+              "      <td>60</td>\n",
+              "      <td>66</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>10</td>\n",
-              "      <td>5</td>\n",
-              "      <td>2</td>\n",
+              "      <td>B介</td>\n",
+              "      <td>80</td>\n",
+              "      <td>88</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>1</td>\n",
-              "      <td>5</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>10</td>\n",
-              "      <td>5</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>1</td>\n",
-              "      <td>6</td>\n",
-              "      <td>7</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>10</td>\n",
-              "      <td>6</td>\n",
-              "      <td>8</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>1</td>\n",
-              "      <td>6</td>\n",
-              "      <td>9</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>10</td>\n",
-              "      <td>6</td>\n",
-              "      <td>10</td>\n",
+              "      <td>C子</td>\n",
+              "      <td>100</td>\n",
+              "      <td>100</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -148,7 +113,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2267433d-6386-4294-a335-bf34b808e490')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-41500ba2-2502-46b1-bff2-a0a5c806c970')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -200,12 +165,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2267433d-6386-4294-a335-bf34b808e490 button.colab-df-convert');\n",
+              "        document.querySelector('#df-41500ba2-2502-46b1-bff2-a0a5c806c970 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2267433d-6386-4294-a335-bf34b808e490');\n",
+              "        const element = document.querySelector('#df-41500ba2-2502-46b1-bff2-a0a5c806c970');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -225,8 +190,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-acc373b3-d160-4ddc-8af4-58b049e43ecd\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-acc373b3-d160-4ddc-8af4-58b049e43ecd')\"\n",
+              "<div id=\"df-b2461951-96cd-4b15-8bf8-31bf930a9255\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b2461951-96cd-4b15-8bf8-31bf930a9255')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -345,14 +310,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-acc373b3-d160-4ddc-8af4-58b049e43ecd button');\n",
+              "        document.querySelector('#df-b2461951-96cd-4b15-8bf8-31bf930a9255 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_fdb7d7bf-3a15-4d27-8009-9bebb55b53f9\">\n",
+              "  <div id=\"id_8d3e839a-b8b6-48ea-9d76-c6a040d3fcd7\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -396,7 +361,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_fdb7d7bf-3a15-4d27-8009-9bebb55b53f9 button.colab-df-generate');\n",
+              "        document.querySelector('#id_8d3e839a-b8b6-48ea-9d76-c6a040d3fcd7 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -413,60 +378,13 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "df",
-              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 8,\n  \"fields\": [\n    {\n      \"column\": \"A\\u6848\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 4,\n        \"min\": 1,\n        \"max\": 10,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          10,\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"B\\u6848\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 5,\n        \"max\": 6,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          6,\n          5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"C\\u6848\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3,\n        \"min\": 1,\n        \"max\": 10,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          2,\n          8\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 3,\n  \"fields\": [\n    {\n      \"column\": \"\\u540d\\u524d\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"A\\u592a\",\n          \"B\\u4ecb\",\n          \"C\\u5b50\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\u56fd\\u8a9e\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 20,\n        \"min\": 60,\n        \"max\": 100,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          60,\n          80,\n          100\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\u82f1\\u8a9e\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 17,\n        \"min\": 66,\n        \"max\": 100,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          66,\n          88,\n          100\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 3
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 列データのヒストグラムを表示"
-      ],
-      "metadata": {
-        "id": "cWvE6w4QaFTn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "bins=[1,3,5,7,9,11]\n",
-        "\n",
-        "df.plot.hist(bins=bins)\n",
-        "plt.title(\"ケーキの感想はどのように違うか？\")\n",
-        "plt.show()"
-      ],
-      "metadata": {
-        "id": "LxlbSnbQZ_uT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df[\"A案\"].plot.hist(bins=bins)\n",
-        "plt.title(\"A案のケーキの感想\")\n",
-        "plt.show()\n",
-        "\n",
-        "df[\"B案\"].plot.hist(bins=bins)\n",
-        "plt.title(\"B案のケーキの感想\")\n",
-        "plt.show()\n",
-        "\n",
-        "df[\"C案\"].plot.hist(bins=bins)\n",
-        "plt.title(\"C案のケーキの感想\")\n",
-        "plt.show()"
-      ],
-      "metadata": {
-        "id": "UpwDKsGNb0bF"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
