列データの棒グラフを表示

--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+ci4x4hbkRYNFu1Te9UIU",
+      "authorship_tag": "ABX9TyNXMVs5XR1AQuh3+Jp8OEyL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -385,6 +385,19 @@
           "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.plot.bar()\n",
+        "plt.title(\"3名の成績\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "OiCOEUHBHv-R"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
